cpp/src/arrow/python/python_to_arrow.cc
@@ -315,7 +315,12 @@ class Date64Converter
  public:
   Status AppendItem(PyObject* obj) {
     int64_t t;
-    if (PyDate_Check(obj)) {
+    if (PyDateTime_Check(obj)) {
+      auto pydate = reinterpret_cast<PyDateTime_DateTime*>(obj);
+      t = PyDateTime_to_ms(pydate);
+      // Truncate any intraday milliseconds
+      t -= t % 86400000LL;
+    } else if (PyDate_Check(obj)) {
       auto pydate = reinterpret_cast<PyDateTime_Date*>(obj);
       t = PyDate_to_ms(pydate);
     } else {
